==> mhaberler/canopennode/CANopen_stack/PIC32/CO_driver.c <==
#include "CO_driver.h"
#include "CO_Emergency.h"
#include <string.h>     // for memcpy
#include <stdlib.h>     // for malloc, free
   #define CAN_REG(base, offset) (*((volatile UNSIGNED32 *) ((base) + _CAN1_BASE_ADDRESS + (offset))))
   #define CLR          0x04
   #define SET          0x08
   #define INV          0x0C
   #define C_CON        0x000                         //Control Register
   #define C_CFG        0x010                         //Baud Rate Configuration Register
   #define C_INT        0x020                         //Interrupt Register
   #define C_VEC        0x030                         //Interrupt Code Register
   #define C_TREC       0x040                         //Transmit/Receive Error Counter Register
   #define C_FSTAT      0x050                         //FIFO Status  Register
   #define C_RXOVF      0x060                         //Receive FIFO Overflow Status Register
   #define C_TMR        0x070                         //CAN Timer Register
   #define C_RXM        0x080 // + (0..3 x 0x10)      //Acceptance Filter Mask Register
   #define C_FLTCON     0x0C0 // + (0..7 x 0x10)      //Filter Control Register
   #define C_RXF        0x140 // + (0..31 x 0x10)     //Acceptance Filter Register
   #define C_FIFOBA     0x340                         //Message Buffer Base Address Register
   #define C_FIFOCON    0x350 // + (0..31 x 0x40)     //FIFO Control Register
   #define C_FIFOINT    0x360 // + (0..31 x 0x40)     //FIFO Interrupt Register

INTEGER16 CO_CANmodule_init(
      CO_CANmodule_t     **ppCANmodule,
      UNSIGNED16           CANbaseAddress,
      UNSIGNED16           rxSize,
      UNSIGNED16           txSize,
      UNSIGNED16           CANbitRate)
{
   UNSIGNED16 i;
   UNSIGNED8 FIFOSize = 33; //32 buffers for receive, 1 buffer for transmit

   //allocate memory if not already allocated
   if((*ppCANmodule) == NULL){
      if(((*ppCANmodule)             = (CO_CANmodule_t *) malloc(         sizeof(CO_CANmodule_t ))) == NULL){                                                                                                     return CO_ERROR_OUT_OF_MEMORY;}
      if(((*ppCANmodule)->CANmsgBuff = (CO_CANrxMsg_t *)  malloc(FIFOSize*sizeof(CO_CANrxMsg_t  ))) == NULL){                                                                 free(*ppCANmodule); *ppCANmodule=0; return CO_ERROR_OUT_OF_MEMORY;}
      if(((*ppCANmodule)->rxArray    = (CO_CANrxArray_t *)malloc(  rxSize*sizeof(CO_CANrxArray_t))) == NULL){                               free((*ppCANmodule)->CANmsgBuff); free(*ppCANmodule); *ppCANmodule=0; return CO_ERROR_OUT_OF_MEMORY;}
      if(((*ppCANmodule)->txArray    = (CO_CANtxArray_t *)malloc(  txSize*sizeof(CO_CANtxArray_t))) == NULL){free((*ppCANmodule)->rxArray); free((*ppCANmodule)->CANmsgBuff); free(*ppCANmodule); *ppCANmodule=0; return CO_ERROR_OUT_OF_MEMORY;}
   }
   else if((*ppCANmodule)->CANmsgBuff == NULL || (*ppCANmodule)->rxArray == NULL || (*ppCANmodule)->txArray == NULL) return CO_ERROR_ILLEGAL_ARGUMENT;

   CO_CANmodule_t *CANmodule = *ppCANmodule; //pointer to (newly created) object

   //Configure object variables
   CANmodule->CANbaseAddress = CANbaseAddress;
   CANmodule->CANmsgBuffSize = FIFOSize;
   CANmodule->rxSize = rxSize;
   CANmodule->txSize = txSize;
   CANmodule->curentSyncTimeIsInsideWindow = 0;
   CANmodule->useCANrxFilters = (rxSize <= 32) ? 1 : 0;
   CANmodule->bufferInhibitFlag = 0;
   CANmodule->firstCANtxMessage = 1;
   CANmodule->CANtxCount = 0;
   CANmodule->errOld = 0;
   CANmodule->EM = 0;
   for(i=0; i<rxSize; i++){
      CANmodule->rxArray[i].ident = 0;
      CANmodule->rxArray[i].pFunct = 0;
   }
   for(i=0; i<txSize; i++){
      CANmodule->txArray[i].bufferFull = 0;
   }
   //clear FIFO
   if(sizeof(CO_CANrxMsg_t) != 16) while(1);//some safety
   UNSIGNED32* f = (UNSIGNED32*) CANmodule->CANmsgBuff;
   for(i=0; i<(FIFOSize*4); i++){
      *(f++) = 0;
   }


   //Configure control register (configuration mode, receive timer stamp is enabled, module is on)
   CAN_REG(CANbaseAddress, C_CON) = 0x04108000;


   //Configure FIFO
   CAN_REG(CANbaseAddress, C_FIFOBA) = KVA_TO_PA(CANmodule->CANmsgBuff);//FIFO base address
   CAN_REG(CANbaseAddress, C_FIFOCON) = 0x001F0000;     //FIFO0: receive FIFO, 32 buffers
   CAN_REG(CANbaseAddress, C_FIFOCON+0x40) = 0x00000080;//FIFO1: transmit FIFO, 1 buffer


   //Configure CAN timing
   switch(CANbitRate){
      case 10:   i=0; break;
      case 20:   i=1; break;
      case 50:   i=2; break;
      default:
      case 125:  i=3; break;
      case 250:  i=4; break;
      case 500:  i=5; break;
      case 800:  i=6; break;
      case 1000: i=7; break;
   }
   CAN_REG(CANbaseAddress, C_CFG) = 
      ((UNSIGNED32)(CO_CANbitRateData[i].phSeg2 - 1)) << 16 |  //SEG2PH
      0x00008000                                            |  //SEG2PHTS = 1, SAM = 0
      ((UNSIGNED32)(CO_CANbitRateData[i].phSeg1 - 1)) << 11 |  //SEG1PH
      ((UNSIGNED32)(CO_CANbitRateData[i].PROP - 1))   << 8  |  //PRSEG
      ((UNSIGNED32)(CO_CANbitRateData[i].SJW - 1))    << 6  |  //SJW
      ((UNSIGNED32)(CO_CANbitRateData[i].BRP - 1));            //BRP


   //CAN module hardware filters
   //clear all filter control registers (disable filters, mask 0 and FIFO 0 selected for all filters)
   for(i=0; i<8; i++)
      CAN_REG(CANbaseAddress, C_FLTCON+i*0x10) = 0x00000000;
   if(CANmodule->useCANrxFilters){
      //CAN module filters are used, they will be configured with
      //CO_CANrxBufferInit() functions, called by separate CANopen
      //init functions.
      //Configure all masks so, that received message must match filter
      CAN_REG(CANbaseAddress, C_RXM) = 0xFFE80000;
      CAN_REG(CANbaseAddress, C_RXM+0x10) = 0xFFE80000;
      CAN_REG(CANbaseAddress, C_RXM+0x20) = 0xFFE80000;
      CAN_REG(CANbaseAddress, C_RXM+0x30) = 0xFFE80000;
   }
   else{
      //CAN module filters are not used, all messages with standard 11-bit
      //identifier will be received
      //Configure mask 0 so, that all messages with standard identifier are accepted
      CAN_REG(CANbaseAddress, C_RXM) = 0x00080000;
      //configure one filter for FIFO 0 and enable it
      CAN_REG(CANbaseAddress, C_RXF) = 0x00000000;
      CAN_REG(CANbaseAddress, C_FLTCON) = 0x00000080;
   }


   //CAN interrupt registers
   //Enable 'RX buffer not empty' (RXNEMPTYIE) interrupt in FIFO 0 (third layer interrupt)
   CAN_REG(CANbaseAddress, C_FIFOINT) = 0x00010000;
   //Enable 'Tx buffer empty' (TXEMPTYIE) interrupt in FIFO 1 (third layer interrupt)
   //CAN_REG(CANbaseAddress, C_FIFOINT+0x40) = 0x01000000; //will be enabled in CO_CANsend
   //Enable receive (RBIE) and transmit (TBIE) buffer interrupt (secont layer interrupt)
   CAN_REG(CANbaseAddress, C_INT) = 0x00030000;
   //CAN interrupt (first layer) must be configured by application

   return CO_ERROR_NO;
}

CO_CANtxArray_t *CO_CANtxBufferInit(
                              CO_CANmodule_t   *CANmodule,
                              UNSIGNED16        index,
                              UNSIGNED16        ident,
                              UNSIGNED8         rtr,
                              UNSIGNED8         noOfBytes,
                              UNSIGNED8         syncFlag)
{
   //safety
   if(!CANmodule || CANmodule->txSize <= index) return 0;

   //get specific buffer
   CO_CANtxArray_t *buffer = &CANmodule->txArray[index];

   //CAN identifier, DLC and rtr, bit aligned with CAN module transmit buffer
   buffer->CMSGSID = ident & 0x07FF;
   buffer->CMSGEID = (noOfBytes & 0xF) | (rtr?0x0200:0);

   buffer->bufferFull = 0;
   buffer->syncFlag = syncFlag?1:0;

   return buffer;
}

INTEGER16 CO_CANsend(   CO_CANmodule_t   *CANmodule,
                        CO_CANtxArray_t  *buffer)
{
   UNSIGNED16 addr = CANmodule->CANbaseAddress;

   //Was previous message sent or it is still waiting?
   if(buffer->bufferFull){
      if(!CANmodule->firstCANtxMessage)//don't set error, if bootup message is still on buffers
         CO_errorReport((CO_emergencyReport_t*)CANmodule->EM, ERROR_CAN_TX_OVERFLOW, 0);
      return CO_ERROR_TX_OVERFLOW;
   }

   //messages with syncFlag set (synchronous PDOs) must be transmited inside preset time window
   if(CANmodule->curentSyncTimeIsInsideWindow && buffer->syncFlag && !(*CANmodule->curentSyncTimeIsInsideWindow)){
      CO_errorReport((CO_emergencyReport_t*)CANmodule->EM, ERROR_TPDO_OUTSIDE_WINDOW, 0);
      return CO_ERROR_TX_PDO_WINDOW;
   }

   //CAN TX message buffer
   UNSIGNED32* TXmsgBuffer = PA_TO_KVA1(CAN_REG(addr, C_FIFOUA+0x40));
   UNSIGNED32* message = (UNSIGNED32*) buffer;
   volatile UNSIGNED32* TX_FIFOcon = &CAN_REG(addr, C_FIFOCON+0x40);
   volatile UNSIGNED32* TX_FIFOconSet = &CAN_REG(addr, C_FIFOCON+0x48);

   DISABLE_INTERRUPTS();
   //if CAN TB buffer is free, copy message to it
   if((*TX_FIFOcon & 0x8) == 0 && CANmodule->CANtxCount == 0){
      CANmodule->bufferInhibitFlag = buffer->syncFlag;
      *(TXmsgBuffer++) = *(message++);
      *(TXmsgBuffer++) = *(message++);
      *(TXmsgBuffer++) = *(message++);
      *(TXmsgBuffer++) = *(message++);
      *TX_FIFOconSet = 0x2000;   //set UINC
      *TX_FIFOconSet = 0x0008;   //set TXREQ
   }
   //if no buffer is free, message will be sent by interrupt
   else{
      buffer->bufferFull = 1;
      CANmodule->CANtxCount++;
      //Enable 'Tx buffer empty' (TXEMPTYIE) interrupt in FIFO 1 (third layer interrupt)
      CAN_REG(addr, C_FIFOINT+0x48) = 0x01000000;
   }
   ENABLE_INTERRUPTS();

   return CO_ERROR_NO;
}

void CO_CANclearPendingSyncPDOs(CO_CANmodule_t *CANmodule){

   volatile UNSIGNED32* TX_FIFOconClr = &CAN_REG(CANmodule->CANbaseAddress, C_FIFOCON+0x44);

   DISABLE_INTERRUPTS();
   if(CANmodule->bufferInhibitFlag){
      *TX_FIFOconClr = 0x0008;   //clear TXREQ
      ENABLE_INTERRUPTS();
      CO_errorReport((CO_emergencyReport_t*)CANmodule->EM, ERROR_TPDO_OUTSIDE_WINDOW, 0);
   }
   else{
      ENABLE_INTERRUPTS();
   }
}

void CO_CANverifyErrors(CO_CANmodule_t *CANmodule){
   UNSIGNED16 rxErrors, txErrors, overflow;
   UNSIGNED32 TREC;
   CO_emergencyReport_t* EM = (CO_emergencyReport_t*)CANmodule->EM;

   TREC = CAN_REG(CANmodule->CANbaseAddress, C_TREC);
   rxErrors = (UNSIGNED8) TREC;
   txErrors = (UNSIGNED8) (TREC>>8);
   if(TREC&0x00200000) txErrors = 256; //bus off
   overflow = (CAN_REG(CANmodule->CANbaseAddress, C_FIFOINT)&0x8) ? 1 : 0;

   UNSIGNED32 err = (UNSIGNED32)txErrors << 16 | rxErrors << 8 | overflow;

   if(CANmodule->errOld != err){
      CANmodule->errOld = err;

      if(txErrors >= 256){                               //bus off
         CO_errorReport(EM, ERROR_CAN_TX_BUS_OFF, err);
      }
      else{                                              //not bus off
         CO_errorReset(EM, ERROR_CAN_TX_BUS_OFF, err);

         if(rxErrors >= 96 || txErrors >= 96){           //bus warning
            CO_errorReport(EM, ERROR_CAN_BUS_WARNING, err);
         }

         if(rxErrors >= 128){                            //RX bus passive
            CO_errorReport(EM, ERROR_CAN_RX_BUS_PASSIVE, err);
         }
         else{
            CO_errorReset(EM, ERROR_CAN_RX_BUS_PASSIVE, err);
         }

         if(txErrors >= 128){                            //TX bus passive
            if(!CANmodule->firstCANtxMessage){
               CO_errorReport(EM, ERROR_CAN_TX_BUS_PASSIVE, err);
            }
         }
         else{
            INTEGER16 wasCleared;
            wasCleared =        CO_errorReset(EM, ERROR_CAN_TX_BUS_PASSIVE, err);
            if(wasCleared == 1) CO_errorReset(EM, ERROR_CAN_TX_OVERFLOW, err);
         }

         if(rxErrors < 96 && txErrors < 96){             //no error
            CO_errorReset(EM, ERROR_CAN_BUS_WARNING, err);
         }
      }

      if(overflow){                       //CAN RX bus overflow
         CO_errorReport(EM, ERROR_CAN_RXB_OVERFLOW, err);
      }
   }
}
