==> mhaberler/canopennode/CANopen_stack/stm32f4xx/CO_driver.c <==
#include <string.h>     // for memcpy
#include <stdlib.h>     // for malloc, free
#include <stddef.h>		// for NULL
#include "config.h"
#include "trace.h"
#include <stm32f4xx_conf.h>
#include "CO_driver.h"
#include "CO_Emergency.h"

int16_t CO_CANmodule_init(
        CO_CANmodule_t **ppCANmodule,
        CAN_TypeDef *CANbaseAddress,
        uint16_t rxSize,
        uint16_t txSize,
        uint16_t CANbitRate) {
    CAN_InitTypeDef CAN_InitStruct;
    CAN_FilterInitTypeDef CAN_FilterInitStruct;
    GPIO_InitTypeDef GPIO_InitStructure;
    int i;
    if ((*ppCANmodule) == NULL) {
        if (((*ppCANmodule) = (CO_CANmodule_t *) malloc(sizeof (CO_CANmodule_t))) == NULL) {
            return CO_ERROR_OUT_OF_MEMORY;
        }
        if (((*ppCANmodule)->rxArray = (CO_CANrx_t *) malloc(rxSize * sizeof (CO_CANrx_t))) == NULL) {
            free(*ppCANmodule);
            *ppCANmodule = 0;
            return CO_ERROR_OUT_OF_MEMORY;
        }
        if (((*ppCANmodule)->txArray = (CO_CANtx_t *) malloc(txSize * sizeof (CO_CANtx_t))) == NULL) {
            free((*ppCANmodule)->rxArray);
            free(*ppCANmodule);
            *ppCANmodule = 0;
            return CO_ERROR_OUT_OF_MEMORY;
        }
    } else if ((*ppCANmodule)->rxArray == NULL || (*ppCANmodule)->txArray == NULL) return CO_ERROR_ILLEGAL_ARGUMENT;

    CO_CANmodule_t *CANmodule = *ppCANmodule; //pointer to (newly created) object

    CANmodule->CANbaseAddress = CANbaseAddress;
    CANmodule->rxSize = rxSize;
    CANmodule->txSize = txSize;
    CANmodule->curentSyncTimeIsInsideWindow = 0;
    CANmodule->bufferInhibitFlag = 0;
    CANmodule->transmittingAborted = 0;
    CANmodule->firstCANtxMessage = 1;
    CANmodule->CANtxCount = 0;
    CANmodule->errOld = 0;
    CANmodule->EM = 0;

    CO_CanInterruptEnDis(CANbaseAddress, DISABLE);

    for (i = 0; i < rxSize; i++) {
        CANmodule->rxArray[i].ident = 0;
        CANmodule->rxArray[i].pFunct = 0;
    }
    for (i = 0; i < txSize; i++) {
        CANmodule->txArray[i].bufferFull = 0;
    }

    /* Setting Clock of CAN HW */
    RCC_APB1PeriphClockCmd( CLOCK_CAN, ENABLE);
    RCC_AHB1PeriphClockCmd( CAN_GPIO_CLK, ENABLE);
	GPIO_PinAFConfig(GPIO_CAN, GPIO_PinSource1, GPIO_AF_CAN1);
	GPIO_PinAFConfig(GPIO_CAN, GPIO_PinSource0, GPIO_AF_CAN1);

	/* Configure CAN pin: RX */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_CAN_RX;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_Init(GPIO_CAN, &GPIO_InitStructure);

	/* Configure CAN pin: TX */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_CAN_TX;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIO_CAN, &GPIO_InitStructure);

    //GPIO_PinAFConfig(GPIOA, GPIO_PinSource2, GPIO_AF_USART2);



    /* Init CAN controler */
    CAN_DeInit(CANmodule->CANbaseAddress);

#if 1
    /* Hard-coded for 125k baudrate */
    CAN_InitStruct.CAN_Prescaler = 16; // 125k baudrate
    CAN_InitStruct.CAN_BS1 = CAN_BS1_14tq;
    CAN_InitStruct.CAN_BS2 = CAN_BS2_6tq;
#else
    /* This code is not written for default STM32F4xx bus speed */
    CAN_StructInit(&CAN_InitStruct);
    CAN_InitStruct.CAN_BS1 = CAN_BS1_3tq;
    CAN_InitStruct.CAN_BS2 = CAN_BS2_2tq;
    switch (CANbitRate) {
        case 1000: CAN_InitStruct.CAN_Prescaler = 6;
            break;
        case 500: CAN_InitStruct.CAN_Prescaler = 12;
            break;
        default:
        case 250: CAN_InitStruct.CAN_Prescaler = 24;
            break;
        case 125: CAN_InitStruct.CAN_Prescaler = 48;
            break;
        case 100: CAN_InitStruct.CAN_Prescaler = 60;
            break;
        case 50: CAN_InitStruct.CAN_Prescaler = 120;
            break;
        case 20: CAN_InitStruct.CAN_Prescaler = 300;
            break;
        case 10: CAN_InitStruct.CAN_Prescaler = 600;
            break;
    }
#endif

    CAN_InitStruct.CAN_Mode = CAN_Mode_Normal;
    //CAN_InitStruct.CAN_Mode=CAN_Mode_Silent_LoopBack;
    CAN_InitStruct.CAN_SJW = CAN_SJW_1tq;
    CAN_InitStruct.CAN_TTCM = DISABLE;  // Time Trigger
    CAN_InitStruct.CAN_ABOM = DISABLE;	// Automatic bus off management
    CAN_InitStruct.CAN_AWUM = DISABLE;	// Automatic Wakeup mode
    CAN_InitStruct.CAN_NART = DISABLE;	// No Automatic retransmision
    CAN_InitStruct.CAN_RFLM = DISABLE;	// Receive FIFO locked mode
    CAN_InitStruct.CAN_TXFP = DISABLE;	// Transmit FIFO priority 1=chronologically 0=by identifier

    TRACE_DEBUG("CAN_Init ");
    uint8_t result;
    if ((result = CAN_Init(CANmodule->CANbaseAddress, &CAN_InitStruct)) != CAN_InitStatus_Success) {
        TRACE_DEBUG_WP("res=%d\n\r", result);
        return result;
    }
    // nastavime 1 filtr, ktery prijima vse
    memset(&CAN_FilterInitStruct, 0, sizeof (CAN_FilterInitStruct));
    CAN_FilterInitStruct.CAN_FilterNumber = 0;
    CAN_FilterInitStruct.CAN_FilterIdHigh = 0;
    CAN_FilterInitStruct.CAN_FilterIdLow = 0;
    CAN_FilterInitStruct.CAN_FilterMaskIdHigh = 0;
    CAN_FilterInitStruct.CAN_FilterMaskIdLow = 0;
    CAN_FilterInitStruct.CAN_FilterFIFOAssignment = 0; // pouzivame jen FIFO0
    CAN_FilterInitStruct.CAN_FilterMode = CAN_FilterMode_IdMask;
    CAN_FilterInitStruct.CAN_FilterScale = CAN_FilterScale_32bit;
    CAN_FilterInitStruct.CAN_FilterActivation = ENABLE;
    CAN_FilterInit(&CAN_FilterInitStruct);

    // povoleni preruseni od CAN1
    NVIC_InitTypeDef NVIC_InitStructure;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;

    // Enable CAN1 RX interrupt
    NVIC_InitStructure.NVIC_IRQChannel = CAN1_RX0_IRQn; // | CAN1_TX_IRQn;
    NVIC_Init(&NVIC_InitStructure);

    // Enable CAN1 TX interrupt
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
    NVIC_InitStructure.NVIC_IRQChannel = CAN1_TX_IRQn;
    NVIC_Init(&NVIC_InitStructure);



    CAN_OperatingModeRequest(CANmodule->CANbaseAddress, CAN_OperatingMode_Normal);

    CO_CanInterruptEnDis(CANbaseAddress, ENABLE);
    TRACE_DEBUG_WP("Ok\n\r");

    return CO_ERROR_NO;
}

CO_CANtx_t *CO_CANtxBufferInit(
        CO_CANmodule_t *CANmodule,
        uint16_t index,
        uint16_t ident,
        uint8_t rtr,
        uint8_t noOfBytes,
        uint8_t syncFlag) {
    //safety
    if (!CANmodule || CANmodule->txSize <= index) return 0;

    //get specific buffer
    CO_CANtx_t *buffer = &CANmodule->txArray[index];

    //CAN identifier, bit aligned with CAN module registers

    uint32_t TXF = 0;
    TXF = ident << (uint32_t)21;
    TXF &= 0xFFE00000;
    if (rtr) TXF |= 0x02;

    buffer->ident = TXF;

    //write to buffer
    buffer->DLC = noOfBytes;
    buffer->bufferFull = 0;
    buffer->syncFlag = syncFlag ? 1 : 0;

    return buffer;
}

int16_t CO_CANsend(CO_CANmodule_t *CANmodule, CO_CANtx_t *buffer) {
   //Code related to CO_CANclearPendingSyncPDOs() function:
   if(CANmodule->transmittingAborted){
    //if message was aborted on buffer, set interrupt flag
    //TODO:  if(CAN_REG(addr, C_TXBUF0 + C_TXCON) & 0x40){CANmodule->transmittingAborted--; CAN_REG(addr, C_INTF) |= 0x04;}
   }

   //Was previous message sent or it is still waiting?
   if(buffer->bufferFull){
      if(!CANmodule->firstCANtxMessage)//don't set error, if bootup message is still on buffers
         CO_errorReport((CO_EM_t*)CANmodule->EM, ERROR_CAN_TX_OVERFLOW, 0);
      return CO_ERROR_TX_OVERFLOW;
   }

   //messages with syncFlag set (synchronous PDOs) must be transmited inside preset time window
   if(CANmodule->curentSyncTimeIsInsideWindow && buffer->syncFlag && !(*CANmodule->curentSyncTimeIsInsideWindow)){
      CO_errorReport((CO_EM_t*)CANmodule->EM, ERROR_TPDO_OUTSIDE_WINDOW, 0);
      return CO_ERROR_TX_PDO_WINDOW;
   }

   //if CAN TB buffer0 is free, copy message to it
   int8_t txBuff = getFreeTxBuff(CANmodule);
   if( (txBuff!=-1)  && CANmodule->CANtxCount == 0){
      CANmodule->bufferInhibitFlag = buffer->syncFlag;
      CO_CANsendToModule(CANmodule, buffer, txBuff);
   }
   //if no buffer is free, message will be sent by interrupt
   else{
      buffer->bufferFull = 1;
      CANmodule->CANtxCount++;
      // vsechny buffery jsou plny, musime povolit preruseni od vysilace, odvysilat az v preruseni
      CAN_ITConfig(CANmodule->CANbaseAddress, CAN_IT_TME, ENABLE);
   }

   return CO_ERROR_NO;
}

void CO_CANclearPendingSyncPDOs(CO_CANmodule_t *CANmodule) {
    DISABLE_INTERRUPTS();

    if (CANmodule->bufferInhibitFlag) {
        CANmodule->CANbaseAddress->TSR |= CAN_TSR_ABRQ0 | CAN_TSR_ABRQ1 | CAN_TSR_ABRQ2;
        ENABLE_INTERRUPTS();
        CO_errorReport((CO_EM_t*) CANmodule->EM, ERROR_TPDO_OUTSIDE_WINDOW, 0);
    } else
        ENABLE_INTERRUPTS();
}

void CO_CANverifyErrors(CO_CANmodule_t *CANmodule) {
   uint32_t err;
   CO_EM_t* EM = (CO_EM_t*)CANmodule->EM;

   err = CANmodule->CANbaseAddress->ESR;
   // if(CAN_REG(CANmodule->CANbaseAddress, C_INTF) & 4) err |= 0x80;

   if(CANmodule->errOld != err){
      CANmodule->errOld = err;

      //CAN RX bus overflow
      if(CANmodule->CANbaseAddress->RF0R & 0x08){
         CO_errorReport(EM, ERROR_CAN_RXB_OVERFLOW, err);
         CANmodule->CANbaseAddress->RF0R &=~0x08;//clear bits
      }

      //CAN TX bus off
      if(err & 0x04) CO_errorReport(EM, ERROR_CAN_TX_BUS_OFF, err);
      else           CO_errorReset(EM, ERROR_CAN_TX_BUS_OFF, err);

      //CAN TX or RX bus passive
      if(err & 0x02){
         if(!CANmodule->firstCANtxMessage) CO_errorReport(EM, ERROR_CAN_TX_BUS_PASSIVE, err);
      }
      else{
         int16_t wasCleared;
         wasCleared =        CO_errorReset(EM, ERROR_CAN_TX_BUS_PASSIVE, err);
         if(wasCleared == 1) CO_errorReset(EM, ERROR_CAN_TX_OVERFLOW, err);
      }


      //CAN TX or RX bus warning
      if(err & 0x01){
         CO_errorReport(EM, ERROR_CAN_BUS_WARNING, err);
      }
      else{
         CO_errorReset(EM, ERROR_CAN_BUS_WARNING, err);
      }
   }
}
